# fmlist

./: fmlist.cabal  tests.hs
.github/workflows/: haskell-ci.yml
Data/: FMList.hs
