name:                fmlist
version:             0.9.4
synopsis:            FoldMap lists
description:
  FoldMap lists are lists represented by their foldMap function.
  FoldMap lists have O(1) cons, snoc and append, just like DLists,
  but other operations might have favorable performance
  characteristics as well. These wild claims are still completely
  unverified though.
category:            Data
license:             BSD3
license-file:        LICENSE
author:              Sjoerd Visscher
maintainer:          sjoerd@w3future.com
homepage:            https://github.com/sjoerdvisscher/fmlist
bug-reports:         https://github.com/sjoerdvisscher/fmlist/issues

build-type:          Simple
cabal-version:       >= 1.10

tested-with:
  GHC == 9.0.1
  GHC == 8.10.4
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2
  GHC == 7.10.3
  GHC == 7.8.4
  GHC == 7.6.3
  GHC == 7.4.2
  GHC == 7.0.4

Library
  exposed-modules:     Data.FMList
  build-depends:       base >= 3 && < 5
  if impl(ghc < 8.0)
    build-depends:     fail
  default-language:    Haskell98

  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat


source-repository head
  type:     git
  location: git://github.com/sjoerdvisscher/fmlist.git
